# TestClion

./: CMakeLists.txt  main.c  matrix.c  matrix.h
testFiles/: 4X4TestMatrix.txt  FindDeterminant.out.stackdump
